cmake_minimum_required( VERSION 2.8.3 )

project(osw)

#############################################################################
# 詳情可以看 gtpc 的 CMakeLists.txt
#############################################################################
include_directories( "${CMAKE_CURRENT_LIST_DIR}/inc" )

#############################################################################
#############################################################################
aux_source_directory( "${CMAKE_CURRENT_LIST_DIR}/src"  _src_files )
iii_get_obj_files( "${CMAKE_CURRENT_LIST_DIR}/src" _obj_files )

#############################################################################
#############################################################################
add_library( ${PROJECT_NAME} SHARED ${_src_files} ${_obj_files} )

#############################################################################
#############################################################################
set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C )

#############################################################################
#############################################################################
iii_osw_config()

#############################################################################
#############################################################################
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${III_LIB_INSTALL_DIR})
